layout.css
:root {
    --accent: #030081;
    --background: #ffffff;
    --backgroundTrans: #ffffff7b;
    --text: #000000;
    --textInverse: #ffffff;
    --sLink: #4d4d4d;
    --sLinkHover: #787878;
  }

.scrollDiv{
    position: fixed;
    right: 0;
    width: 47%;
    height: 45px;
    background-color: var(--background);
    z-index: -1;
    border-bottom-width:2px;
    border-bottom-style:solid;
    border-bottom-color: var(--accent);
    animation: scrollDiv 1s linear;
    
}

@keyframes scrollDiv {
    to {
      width: 100%;
    }
  }

:root * {
    /* Pause the animation */
    animation-play-state: paused;
    /* Bind the animation to scroll */
    animation-delay: calc(var(--scroll) * -1s);
    /* These last 2 properites clean up overshoot weirdness */
    animation-iteration-count: 1;
    animation-fill-mode: both;
  }

.webringButton {
    display: flex;
    align-items: center;
    background-color: #f5f5f500;
    margin-top: 5px;
    width: fit-content;
}

body {
    margin: 0;
    padding: 0;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    background-color: var(--background);
  }

.raleway-font {
    font-family: "Raleway", sans-serif;
    font-optical-sizing: auto;
    font-weight: 100;
    font-style: normal;
}

.antic-didone-regular {
    font-family: "Antic Didone", serif;
    font-weight: 400;
    font-style: normal;
  }  

p {
    font-family: "Raleway", sans-serif;
    font-size: 100%;
    color: var(--text);
}

h1{
    font-family: "Antic Didone", serif;
    font-weight: 500;
    font-size: 225%;
    color: var(--text);
}

h2{
    font-family: "Raleway", sans-serif;
    font-size: 150%; 
    color: var(--accent);
}

h3{
    font-family: "Raleway", sans-serif;
    font-weight: 200;
    font-size: 250%; 
    line-height: 75%;
    color: var(--accent);
}

ul{
    font-family: "Raleway", sans-serif;
    font-size: 100%;
    color: var(--text);
}

.textHighlight{
    color: var(--accent);
}

.mainParagraph {
    display: grid;
    grid-template-columns:50% 50%;
    align-items: start;

  }

  .mainPageText{
    /* position: fixed; */
    margin-top: 75px;
    width: 70%;
    height: fit-content;
    margin-left: 18%;
  }

  /* .projectParagraphs{
    display: grid;
    grid-template-columns: 5% 95%;
    align-items: start;
  } */

  /* img{
    margin-left: 10% ;
    margin-right: 10%;
  } */

.star{
    height: 15%;
    width: 15%;
    content: url("img/starDivider.svg");
}

.star.dark{
    height: 15%;
    width: 15%;
    content: url("img/starInvert.svg");
}


.footer {
    display: flex;
    margin-top: auto;
    height:35px;
    background-color:  var(--accent);
 }

@keyframes fadeInUp {
0% {
    transform: translateY(40%);
    opacity: 0;
}
100% {
    transform: translateY(0%);
    opacity: 1;
}
}

.fadeInUp-animation {
animation: 1s fadeInUp;
}

.navMenu {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 45px;
    background-color: var(--backgroundTrans);
} 

.navLinks{
    /* position: fixed;
    top: 0;
    right: 0;
    width: 50%;
    height: 7.5%; */
    position: fixed;
    right: 0;
    width: 47%;
    height: 45px;
    display: flex;

}


/* Style the links inside the navigation bar */
.navMenu a {
    float: left;
    color: var(--text);
    text-align: center;
    padding-right: 4%;
    padding-top: 2%;
    padding-bottom: 2%;
    text-decoration: none;
    font-family: "Raleway", sans-serif;
    font-size: 120%;
    padding-left: 0%;
  }
  
  /* Change the color of links on hover */
  .navMenu a:hover {
    color:  var(--accent);
    text-decoration: none;
  }

a {
    color:  var(--accent);
    text-decoration:none;
}

a:hover{
    text-decoration: underline;
    color: var(--accent);
    /* color: #F9CA24 */
    /* color: #F1C40F */
    
}

a.paragraphLinks {
    color:  var(--text);
    text-decoration:none;
}

a.paragraphLinks:hover{
    text-decoration: underline;
    color: var(--accent);
    
}

a.smallLinks{
    color: var(--sLink);
    font-weight: 700;
    padding: 2%;
}
a.smallLinks:hover {
    text-decoration: none;
    color: var(--sLinkHover);
}

a.webring{
    color: var(--textInverse);
    text-decoration: none; 
    font-size: 100%; 
    margin-left: 5%;
}

